# micadoi

./: README.md  cag-baseline.doi.json  config.json  creator.json  datacite.http  doi.json  new_attributes.json  notes.md  pyproject.toml  tox.ini
mica_extractor/: __main__.py
micadoi/: __main__.py  datacite.py  mica.py  models.py
output/: mavipan.doi.json  mavipan.mica.json
tests/: test_mica_extractor.py
